--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,29 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "ruff>=0.9.6",
     "utils>=1.0.2",
+    "langchain-experimental>=0.3.4",
+    "tabulate>=0.9.0",
+    "langchain-anthropic>=0.3.9",
+    "langchain-community>=0.3.19",
+    "scikit-learn>=1.6.1",
 ]
 
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+]
