--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "langchain-anthropic>=0.3.9",
     "langchain-community>=0.3.19",
     "scikit-learn>=1.6.1",
+    "openpyxl>=3.1.5",
 ]
 
 [build-system]
