--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "langchain-community>=0.3.19",
     "scikit-learn>=1.6.1",
     "openpyxl>=3.1.5",
+    "jupyter>=1.1.1",
 ]
 
 [build-system]
