--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,40 @@
 [project]
-name = "llm101"
+name = "be-llm101"
 version = "0.1.0"
-description = "Add your description here"
+description = "A Python package for a BearingPoint internal LLM course"
 readme = "README.md"
 requires-python = ">=3.13"
+authors = [
+    {name = "Your Name", email = "your.email@example.com"},
+]
+license = {text = "MIT"}
+keywords = ["llm", "ai", "machine-learning", "utilities"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.13",
+]
 dependencies = [
-    "black>=25.1.0",
-    "kagglehub[pandas-datasets]>=0.3.8",
-    "langchain>=0.3.19",
     "langchain-core>=0.3.35",
     "langchain-openai>=0.3.6",
-    "langfuse>=2.59.3",
     "python-dotenv>=1.0.1",
-    "ruff>=0.9.6",
-    "utils>=1.0.2",
-    "langchain-experimental>=0.3.4",
-    "tabulate>=0.9.0",
-    "langchain-anthropic>=0.3.9",
-    "langchain-community>=0.3.19",
-    "scikit-learn>=1.6.1",
     "openpyxl>=3.1.5",
-    "jupyter>=1.1.1",
+    "pandas>=2.2.3",
 ]
 
+[project.urls]
+Homepage = "https://github.com/yourusername/be-llm101"
+Repository = "https://github.com/yourusername/be-llm101"
+Issues = "https://github.com/yourusername/be-llm101/issues"
+
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/be_llm101"]
 
 [tool.ruff.lint]
 select = [
@@ -42,3 +51,26 @@ select = [
     # isort
     "I",
 ]
+
+[tool.uv]
+dev-dependencies = [
+    "langfuse>=2.59.7",
+    "kagglehub[pandas-datasets]>=0.3.8",
+    "ruff>=0.9.6",
+    "langchain-anthropic>=0.3.9",
+    "langchain-experimental>=0.3.4",
+    "tabulate>=0.9.0",
+    "scikit-learn>=1.6.1",
+    "langchain>=0.3.19",
+    "langchain-community>=0.3.19",
+    "black>=25.1.0",
+    "utils>=1.0.2",
+    "jupyter>=1.1.1",
+    "hatchling>=1.18.0",
+]
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
