--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "be-llm101"
-version = "0.1.0"
+version = "0.1.4"
 description = "A Python package for a BearingPoint internal LLM course"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11.12"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"},
+    {name = "Eline and Kaspara", email = "your.email@example.com"},
 ]
 license = {text = "MIT"}
 keywords = ["llm", "ai", "machine-learning", "utilities"]
@@ -21,7 +21,6 @@ dependencies = [
     "langchain-openai>=0.3.6",
     "python-dotenv>=1.0.1",
     "openpyxl>=3.1.5",
-    "pandas>=2.2.3",
 ]
 
 [project.urls]
@@ -35,6 +34,15 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/be_llm101"]
+
+[tool.hatch.build.targets.wheel.force-include]
+"src/be_llm101/data" = "be_llm101/data"
+
+[tool.hatch.build.targets.sdist]
+include = [
+  "src/be_llm101",
+  "src/be_llm101/data/*.csv",
+]
 
 [tool.ruff.lint]
 select = [
@@ -67,6 +75,7 @@ dev-dependencies = [
     "utils>=1.0.2",
     "jupyter>=1.1.1",
     "hatchling>=1.18.0",
+    "pandas>=2.2.3",
 ]
 
 [[tool.uv.index]]
