--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "scikit-learn>=1.6.1",
     "openpyxl>=3.1.5",
     "jupyter>=1.1.1",
+    "devtools>=0.12.2",
 ]
 
 [build-system]
